@@ -412,7 +412,13 @@ public
      var BooleanResult : Boolean; NestingLevel : Integer; var InfoSyntaxError : String) : Boolean;
 
   procedure GetWordOrStringExpressionstr (const s: String;
-                           var resultString, Remaining, errorinfo : String);
+         var resultString, Remaining, errorinfo : String); overload;
+
+  procedure GetWordOrStringExpressionstr (const s: String;
+         var resultString, Remaining : String; const WordDelimiterSet: TCharset); overload;
+
+  function SkipWordOrStringExpressionstr (const partialS,
+      S: string; var Remaining: string; var Error: string): boolean;
 
   function produceExecLine(const s : String;
                         var programfilename, programparas, passparas, winstoption: String;
@@ -4418,9 +4424,9 @@ var
   ErrorInfo : String='';
   SyntaxCheck : Boolean;
   Expressionstr : String='';
-  (* wenn die globale Variable Expressionstr hier nicht lokal neu angelegt wird,
+  { wenn die globale Variable Expressionstr hier nicht lokal neu angelegt wird,
      so verliert der Parameter Sectionname, der ein Zeiger auf die globale Variable Expressionstr ist,
-     zusammen mit dieser seinen Wert *)
+     zusammen mit dieser seinen Wert }
     r : String='';
   i : integer=0;
   k : Integer=0;
@@ -4801,9 +4807,9 @@ var
   citmark : Char;
   SyntaxCheck : Boolean;
   Expressionstr : String='';
-  (* wenn die globale Variable Expressionstr hier nicht lokal neu angelegt wird,
+  { wenn die globale Variable Expressionstr hier nicht lokal neu angelegt wird,
      so verliert der Parameter Sectionname, der ein Zeiger auf die globale Variable Expressionstr ist,
-     zusammen mit dieser seinen Wert *)
+     zusammen mit dieser seinen Wert }
   r : String='';
   i : Integer=0;
   varno : Integer=0;
@@ -5478,10 +5484,10 @@ begin
                then SyntaxCheck := true
                else ErrorInfo := 'not interpreted characters after ]';
 
-             (* fuege RegParameter vor key ein *)
+             { fuege RegParameter vor key ein }
                 TemplateKey := basekey + TemplateKey;
 
-             (* hole HKEY aus key heraus *)
+             { hole HKEY aus key heraus }
                GetWord (TemplateKey, key0, TemplateKey, ['\']);
                System.Delete (TemplateKey, 1,1);
              end;
@@ -7955,6 +7961,8 @@ function TuibInstScript.doFileActions (const Sektion: TWorkSection; CopyParamete
   //OldWinapiErrorMode: Cardinal;
 
   Install : TuibFileInstall;
+  goon, flag_all_ntuser_send, force64 : boolean;
+
 
   procedure fileActionsMain (const Section : TXStringList; const presetDir : String);
   var
@@ -7970,6 +7978,7 @@ function TuibInstScript.doFileActions (const Sektion: TWorkSection; CopyParamete
     shellcallArchParam : String;
     go_on : boolean;
     tmpstr,searchmask : string;
+
 
 
   begin
@@ -8861,11 +8870,50 @@ begin
 
   Install := TuibFileInstall.create;
 
+  goon := false;
+  remaining := CopyParameter;
+  flag_all_ntuser_send := false;
+  force64 := false;
+
+  if length (remaining) > 0 then goon := true;
+  while goon
+  do
+  begin
+    if SkipWordOrStringExpressionstr('/64bit', Remaining, Remaining, ErrorInfo)
+    then
+      if Is64BitSystem then force64 := true;
+
+    if SkipWordOrStringExpressionstr('/sysnative', Remaining, Remaining, ErrorInfo)
+    then
+      if Is64BitSystem then force64 := true;
+
+    if SkipWordOrStringExpressionstr('/32bit', Remaining, Remaining, ErrorInfo)
+    then
+      force64 := false;
+
+    if SkipWordOrStringExpressionstr(Parameter_AllNTUserProfiles, Remaining, Remaining, ErrorInfo)
+    then
+      flag_all_ntuser := true;
+
+    if SkipWordOrStringExpressionstr(Parameter_AllNTUserSendTo, Remaining, Remaining, ErrorInfo)
+    then
+      flag_all_ntuser_send := true
+
+    else
+    Begin
+      goon := false;
+      if length (remaining) > 0
+      then
+      begin
+        LogDatei.log('Syntaxerror: "' + remaining + '" is no valid parameter ',LLError);
+      end;
+    end;
+  end;
+
   {$IFDEF WIN32}
   // disable  critical-error-handler message box. (Drive not ready)
   //OldWinapiErrorMode := SetErrorMode(SEM_FAILCRITICALERRORS);
-   if (0 < pos(lowercase (Parameter_64Bit), lowercase (CopyParameter)))
-     or (0 < pos(lowercase (Parameter_SysNative), lowercase (CopyParameter))) then
+   if force64 = true then
    Begin
      boolresult := DSiDisableWow64FsRedirection(oldDisableWow64FsRedirectionStatus);
      Wow64FsRedirectionDisabled := true;
@@ -8873,8 +8921,7 @@ begin
    else Wow64FsRedirectionDisabled := false;
    {$ENDIF WIN32}
 
-  if (0 < pos(lowercase (Parameter_AllNTUserProfiles),lowercase (CopyParameter)))
-    or flag_all_ntuser
+  if flag_all_ntuser
   then
   Begin
     flag_all_ntuser := false;
@@ -8889,7 +8936,7 @@ begin
       end;
     end;
   End
-  else if 0 < pos(lowercase(Parameter_AllNTUserSendTo), lowercase (CopyParameter))
+  else if flag_all_ntuser_send
   then
   Begin
     flag_all_ntuser := false;
@@ -9953,6 +10000,8 @@ Var
  aktos : TuibOSVersion;
  cmdMuiFiles : Tstringlist;
  muisrcpath, muitargetpath : string;
+ goon : boolean;
+ remaining : string;
 
 begin
  try
@@ -10026,7 +10075,54 @@ begin
     end;
     force64 := false;
     runAs := traInvoker;
+    goon := false;
+    remaining := winstparam;
 
+    if length (winstparam) > 0 then goon := true;
+    while goon
+    do
+    begin
+      if SkipWordOrStringExpressionstr('/64bit', Remaining, Remaining, ErrorInfo)
+      then
+        if Is64BitSystem then force64 := true;
+
+      if SkipWordOrStringExpressionstr('/sysnative', Remaining, Remaining, ErrorInfo)
+      then
+        if Is64BitSystem then force64 := true;
+
+      if SkipWordOrStringExpressionstr('/32bit', Remaining, Remaining, ErrorInfo)
+      then
+        force64 := false;
+
+      if SkipWordOrStringExpressionstr('/showoutput', Remaining, Remaining, ErrorInfo)
+      then
+      begin
+         showoutput := true;
+         LogDatei.log('Set Showoutput true', LLDebug3);
+      end;
+
+      if SkipWordOrStringExpressionstr('/ParameterRunAsLoggedOnUser', Remaining, Remaining, ErrorInfo)
+      then
+      Begin
+        if runLoginScripts then
+          runAs := traLoggedOnUser
+        else
+          LogDatei.log('Warning: Not in UserLoginScript mode: /RunAsLoggedinUser ignored', LLWarning);
+      End
+
+      else
+      Begin
+        goon := false;
+        if length (remaining) > 0
+        then
+        begin
+         LogDatei.log('Syntaxerror: "' + remaining + '" is no valid parameter ',LLError);
+        end;
+      end;
+
+    end;
+
+(*
     If (pos(lowercase('/64bit'),lowercase(winstparam)) > 0 ) and Is64BitSystem then
        force64 := true;
 
@@ -10049,6 +10145,7 @@ begin
       else
         LogDatei.log('Warning: Not in UserLoginScript mode: /RunAsLoggedinUser ignored', LLWarning);
     End;
+    *)
 
     {$IFDEF WIN32}
     if force64 then
@@ -10471,15 +10568,15 @@ begin
     do
     Begin
       if
-      not Skip(ParameterDontWait, remaining, remaining, InfoSyntaxError)
+      not SkipWordOrStringExpressionstr(ParameterDontWait, remaining, remaining, InfoSyntaxError)
       and
-      not Skip(ParameterEscapeStrings, remaining, remaining, InfoSyntaxError)
+      not SkipWordOrStringExpressionstr(ParameterEscapeStrings, remaining, remaining, InfoSyntaxError)
       and
-      not Skip(Parameter_64Bit, remaining, remaining, InfoSyntaxError)
+      not SkipWordOrStringExpressionstr(Parameter_64Bit, remaining, remaining, InfoSyntaxError)
       and
-      not Skip(Parameter_32Bit, remaining, remaining, InfoSyntaxError)
+      not SkipWordOrStringExpressionstr(Parameter_32Bit, remaining, remaining, InfoSyntaxError)
       and
-      not Skip(Parameter_SysNative, remaining, remaining, InfoSyntaxError)
+      not SkipWordOrStringExpressionstr(Parameter_SysNative, remaining, remaining, InfoSyntaxError)
       then continue := false;
     end;
 
@@ -10543,6 +10640,8 @@ Var
  force64 : boolean;
  oldDisableWow64FsRedirectionStatus: pointer=nil;
  Wow64FsRedirectionDisabled, boolresult: boolean;
+ goon : boolean;
+ remaining : string;
 
 
 begin
@@ -10640,6 +10739,37 @@ begin
           + passparas;
 
       force64 := false;
+
+    goon := false;
+    remaining := winstoption;
+
+    if length (remaining) > 0 then goon := true;
+    while goon
+    do
+    begin
+      if SkipWordOrStringExpressionstr('/64bit', Remaining, Remaining, ErrorInfo)
+      then
+        if Is64BitSystem then force64 := true;
+
+      if SkipWordOrStringExpressionstr('/sysnative', Remaining, Remaining, ErrorInfo)
+      then
+        if Is64BitSystem then force64 := true;
+
+      if SkipWordOrStringExpressionstr('/32bit', Remaining, Remaining, ErrorInfo)
+      then
+        force64 := false
+
+      else
+      Begin
+        goon := false;
+        if length (remaining) > 0
+        then
+        begin
+          LogDatei.log('Syntaxerror: "' + remaining + '" is no valid parameter ',LLError);
+        end;
+      end;
+    end;
+    (*
       If (pos (lowercase('/64bit'), lowercase (winstoption)) > 0) and Is64BitSystem then
          force64 := true;
 
@@ -10648,6 +10778,7 @@ begin
 
       If (pos (lowercase('/32bit'), lowercase (winstoption)) > 0) then
          force64 := false;
+    *)
 
       {$IFDEF WIN32}
       Wow64FsRedirectionDisabled := false;
@@ -14652,7 +14783,7 @@ begin
                {$ENDIF WIN32}
                WaitSecs := 0;
                flag_force64 := false;
-               GetWord (r, expr, r, WordDelimiterSet0);
+               GetWordOrStringExpressionstr (r, expr, r, WordDelimiterSet0);
                SyntaxCheck := true;
 
                ident := '';
@@ -16988,6 +17119,51 @@ begin
   if not EvaluateString (s0, Remaining, resultString, errorInfo)
   then
     GetWord (s0, resultString, Remaining, WordDelimiterWhiteSpace);
+end;
+
+procedure TuibInstScript.GetWordOrStringExpressionstr (const s: String;
+                           var resultString, Remaining: String; const WordDelimiterSet: TCharset);
+ { nur fuer AktionenSektion-Syntax 0 }
+ var
+  s0 : String='';
+  errorinfo : String='';
+
+begin
+  Resultstring := '';
+  s0 := s;
+  setLength (s0, length (s)); //should create a new instance, but does not always work
+  if not EvaluateString (s0, Remaining, resultString, errorInfo)
+  then
+    GetWord (s0, resultString, Remaining, WordDelimiterSet);
+end;
+
+function TuibInstScript.SkipWordOrStringExpressionstr (const partialS,
+      S: string; var Remaining: string; var Error: string): boolean;
+ { like skip but handles also string expressions }
+
+ var
+  orgstring : String='';
+  resultString : String='';
+  errorinfo : String='';
+
+begin
+  Result := False;
+  orgstring := S;
+  GetWordOrStringExpressionstr (S, resultString, Remaining, errorinfo);
+  if trim(AnsiUpperCase(partialS)) = trim(AnsiUpperCase(resultString))then
+  begin
+   Result := true;
+   Remaining := trim(Remaining);
+  end
+  else
+  begin
+    Result := False;
+    Remaining := trim(orgstring);
+  end;
+  if Result then
+    Error := ''
+  else
+    Error := '"' + partialS + '" expected '+ errorinfo;
 end;
 
 
@@ -21984,12 +22160,12 @@ begin
                    do
                    begin
 
-                      if skip(Parameter_AllNTUserProfiles, Remaining, Remaining, ErrorInfo)
+                      if SkipWordOrStringExpressionstr(Parameter_AllNTUserProfiles, Remaining, Remaining, ErrorInfo)
                       then
                         flag_all_ntuser := true
 
                       else
-                      if skip('/encoding', Remaining, Remaining, ErrorInfo)
+                      if SkipWordOrStringExpressionstr('/encoding', Remaining, Remaining, ErrorInfo)
                       then
                       begin
                         if not EvaluateString (Remaining, Remaining, flag_encoding, ErrorInfo) then
@@ -22054,15 +22230,15 @@ begin
                    do
                    begin
 
-                      if skip(Parameter_AllNTUserDats, Remaining, Remaining, ErrorInfo)
+                      if SkipWordOrStringExpressionstr(Parameter_AllNTUserDats, Remaining, Remaining, ErrorInfo)
                       then
                         flag_all_ntuser := true
 
-                      else if skip(Parameter_AllUsrClassDats, Remaining, Remaining, ErrorInfo)
+                      else if SkipWordOrStringExpressionstr(Parameter_AllUsrClassDats, Remaining, Remaining, ErrorInfo)
                       then
                         flag_all_usrclass := true
 
-                      else if skip(Parameter_RegistryNTUserDat, Remaining, Remaining, ErrorInfo)
+                      else if SkipWordOrStringExpressionstr(Parameter_RegistryNTUserDat, Remaining, Remaining, ErrorInfo)
                       then
                       begin
                         flag_ntuser := true;
@@ -22073,7 +22249,7 @@ begin
                         end;
                       end
 
-                      else if skip(Parameter_Registry64Bit, Remaining, Remaining, ErrorInfo)
+                      else if SkipWordOrStringExpressionstr(Parameter_Registry64Bit, Remaining, Remaining, ErrorInfo)
                       then
                       begin
                         if (GetNTVersionMajor = 5) and (GetNTVersionMinor = 0) then
@@ -22088,7 +22264,7 @@ begin
                       end
 
 
-                      else if skip(Parameter_Registry32Bit, Remaining, Remaining, ErrorInfo)
+                      else if SkipWordOrStringExpressionstr(Parameter_Registry32Bit, Remaining, Remaining, ErrorInfo)
                       then
                       begin
                         if flag_all_ntuser then
@@ -22101,7 +22277,7 @@ begin
                         else flag_force64 := false;
                       end
 
-                      else if skip(Parameter_RegistrySysNative, Remaining, Remaining, ErrorInfo)
+                      else if SkipWordOrStringExpressionstr(Parameter_RegistrySysNative, Remaining, Remaining, ErrorInfo)
                       then
                       begin
                         if (GetNTVersionMajor = 5) and (GetNTVersionMinor = 0) then
@@ -22116,22 +22292,22 @@ begin
                       end
 
 
-                      else if skip (Parameter_RegistryUsercontext, Remaining, Remaining, ErrorInfo)
+                      else if SkipWordOrStringExpressionstr (Parameter_RegistryUsercontext, Remaining, Remaining, ErrorInfo)
                       then
                         reg_specified_basekey := 'HKEY_USERS\' + usercontextSID
 
                       else if
-                        skip (Parameter_RegistryBaseKey, Remaining, Remaining, ErrorInfo)
+                        SkipWordOrStringExpressionstr (Parameter_RegistryBaseKey, Remaining, Remaining, ErrorInfo)
                         and skip ('=', Remaining, Remaining, ErrorInfo)
                         and GetString(Remaining, s1, Remaining, ErrorInfo, false)
                       then
                         reg_specified_basekey := s1
 
-                      else if skip (Parameter_SysDiffAddReg, Remaining, Remaining, ErrorInfo)
+                      else if SkipWordOrStringExpressionstr (Parameter_SysDiffAddReg, Remaining, Remaining, ErrorInfo)
                       then
                         registryformat := trfSysdiff
 
-                      else if skip (Parameter_RegeditFormat, Remaining, Remaining, ErrorInfo)
+                      else if SkipWordOrStringExpressionstr (Parameter_RegeditFormat, Remaining, Remaining, ErrorInfo)
                       then
                         registryformat := trfRegedit
 
@@ -22247,7 +22423,7 @@ begin
                    logdatei.log('Execution of: '+ArbeitsSektion.Name+' '+ Remaining,LLNotice);
                    Parameter := Remaining;
                    if (uppercase(PStatNames^ [tsOpsiServiceCall]) = uppercase(Expressionstr))
-                      and skip ('/preloginservice', Remaining, Remaining, errorInfo)
+                      and SkipWordOrStringExpressionstr ('/preloginservice', Remaining, Remaining, errorInfo)
                      then
                    begin
                      logdatei.log('Execution of OpsiServiceCall /preloginservce',LLNotice);
@@ -22335,7 +22511,7 @@ begin
                  {$ENDIF WIN32}
                  WaitSecs := 0;
                  flag_force64 := false;
-                 GetWord (Remaining, expr, Remaining, WordDelimiterSet0);
+                 GetWordOrStringExpressionstr (Remaining, expr, Remaining, WordDelimiterSet0);
                  SyntaxCheck := true;
 
                  ident := '';
